spacing fixed

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     color: black;
     margin: 0px;
     box-sizing: border-box;
+    text-decoration: none;
 }
 #subheading {
     font-size: 30px;
@@ -29,8 +30,6 @@
 .bigger {
     font-weight: bolder;
     font-size: 40px;
-    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-    /* background-color: blue; */
 }
 
 .navbar {
